# magicjson-rust

./: .gitignore  Cargo.toml  config.toml  json-x.py  pyproject.toml  test.py  test.sh
magicjson/: __init__.py  magicjson.pyi
pysrc/: __init__.py
src/: constants.rs  deserialize.rs  handler.rs  lib.rs  objects.rs  serialize copy 2.rs  serialize copy.rs  serialize.rs  serializer.rs  test.rs  wrapper.rs
tests/: test.rs  test0.json  test1.json
