[package]
name = "magicjson-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "magicjson_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.10.1"