[package]
name = "magicjson"
version = "0.0.1-alpha.1"
edition = "2021"
description = "A Rust library for parsing JSON with magic."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "magicjson"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.10.1"
lazy_static = "1.4.0"
chrono-tz = "0.8.5"